# unitree_G1

./: .gitignore  README.md  Unitree_G1_Scene_Cases.md
dex_rl_ready/scripts/: __init__.py  run_allegro.bat  run_dexsuite.bat  run_dexsuite_reorient.bat  run_shadow.bat  train_allegro.py  train_dexsuite.py  train_dexsuite_reorient.py  train_shadow.py
franka_teleop/: README.md  __init__.py
franka_teleop/scripts/: __init__.py  record_demos_franka.bat  replay_demos_franka.bat  test_keyboard_teleop.py  test_teleop_franka.bat  test_teleop_g1.bat  test_teleop_g1.py  view_g1_scene.bat  view_g1_scene.py
g1_grasp_rl/: __init__.py  g1_grasp_env_cfg.py  mdp.py
g1_grasp_rl/scripts/: __init__.py  play.py  run_play.bat  run_train.bat  train.py  view_env.bat  view_env.py
g1_locomotion/: run.bat
g1_locomotion/scripts/: play.py  random_play.py  train.py
unitree_sim_isaaclab/: .gitignore  .gitmodules  Dockerfile  README.md  README_zh-CN.md  TELEOP_SESSION.md  auto_setup_env.sh  coupled_grasp_action.py  env_cfg.py  eval_policy.py  fetch_assets.sh  play.py  requirements.txt  run_eval.bat  run_play.bat  run_teleop.bat  run_train.bat  run_train_demo.bat  sim_main.py  teleop_contact_zone.py  teleop_fingers.py  teleop_grasp.py  teleop_grasp_detect.py  teleop_hand.py  teleop_pink_env_cfg.py  train.py  view_scene.bat  view_scene.py
unitree_sim_isaaclab/teleimager/: .gitignore  LICENSE  README.md  README_zh-CN.md  cam_config_server.yaml  pyproject.toml  setup_autostart.sh  setup_uvc.sh
unitree_sim_isaaclab/teleimager/src/teleimager/: image_client.py  image_server.py
(+44 files in other folders)
